--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@editorjs/editorjs": "^2.18.0",
+		"@editorjs/header": "^2.5.0",
+		"@editorjs/list": "^1.5.0",
+		"@editorjs/paragraph": "^2.7.0",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.2",
+		"google-map-react": "^2.1.3",
 		"http-proxy-middleware": "^1.0.5",
 		"js-cookie": "^2.2.1",
 		"node-sass": "^4.14.1",
@@ -16,6 +21,7 @@
 		"react-dom": "^16.13.1",
 		"react-facebook-login": "^4.1.1",
 		"react-google-login": "^5.1.21",
+		"react-google-places-autocomplete": "^3.0.0-alpha.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
 		"styled-components": "^5.1.1"
