--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
 		"react-facebook-login": "^4.1.1",
+		"react-google-autocomplete": "^1.2.6",
 		"react-google-login": "^5.1.21",
 		"react-google-places-autocomplete": "^3.0.0-alpha.1",
 		"react-router-dom": "^5.2.0",
