--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:5000/api/
+REACT_APP_API_URL=http://localhost:5000/api
 GOOGLE_API_KEY=AIzaSyAUENym8OVt2pBPNIMzvYLnXj_C7lIZtSw&
