--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://getaways-guru.herokuapp.com
-GOOGLE_API_KEY=AIzaSyAUENym8OVt2pBPNIMzvYLnXj_C7lIZtSw&
+REACT_APP_API_URL=https://getaways-guru.herokuapp.com/api
+REACT_APP_GOOGLE_API_KEY=AIzaSyAUENym8OVt2pBPNIMzvYLnXj_C7lIZtSw&
