--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 		"bootstrap": "^4.5.2",
 		"google-map-react": "^2.1.3",
 		"http-proxy-middleware": "^1.0.5",
-		"js-cookie": "^2.2.1",
 		"node-sass": "^4.14.1",
 		"path": "^0.12.7",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.3.0",
+		"react-cookie": "^4.0.3",
 		"react-dom": "^16.13.1",
 		"react-facebook-login": "^4.1.1",
 		"react-google-autocomplete": "^1.2.6",
